# isolator-v-wasm-sandbox

./: .gitignore  Cargo.toml  README.md
fixtures/: memory_hog.wat
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentVitals.tsx  CodeEditor.tsx  ComponentRegistry.tsx  ConsoleLoader.tsx  ExecutionConsole.tsx  HelpOverlay.tsx  OrchestratorStatus.tsx  StatusBar.tsx  Terminal.tsx  TerminalErrorBoundary.tsx  ThemeToggle.tsx  Tooltip.tsx  VirtualFileTree.tsx
orchestrator/: .env.example  .gitignore  Makefile  docker-compose.yml  go.mod  go.sum
orchestrator/cmd/server/: main.go
orchestrator/internal/api/: compile.go  handlers.go  handlers_test.go  server.go
orchestrator/internal/config/: config.go
orchestrator/internal/middleware/: auth.go  auth_test.go  metrics.go  ratelimit.go  ratelimit_test.go
orchestrator/internal/pool/: manager.go  manager_bench_test.go  manager_test.go  pool.go  pool_test.go
orchestrator/internal/ratelimit/: tokenbucket.go  tokenbucket_test.go
orchestrator/internal/vfs/: writebehind.go  writebehind_test.go
orchestrator/internal/worker/: client.go  grpc.go  http.go  http_test.go
orchestrator/proto/sandbox/v1/: sandbox.proto
scripts/: test_api.sh
src/: api.rs  error.rs  sandbox_pool.rs
tests/: integration_test.rs
wasm-demos/: Cargo.toml  build.sh
wasm-worker-manager/: .gitignore  Cargo.toml  TESTING.md
wasm-worker-manager/fixtures/: hello.wat  infinite_loop.wat  path_traversal.wat
wasm-worker-manager/src/: api.rs  backpressure.rs  capability.rs  lib.rs  main.rs  pii_scrubber.rs  resource_monitor.rs  sandbox_pool.rs  seccomp_guard.rs  vfs.rs
wasm-worker-manager/tests/: integration_test.rs
